Setting up User Addresses Co-authored-by: Sonny00 <sonny.luscap@gmail.com> Co-authored-by: Mustakim-Khan <mustakimzidan@gmail.com> Co-authored-by: TORKIAHALA <halatorkia28@gmail.com>

--- a/templates/front/account/index.html.twig
+++ b/templates/front/account/index.html.twig
@@ -41,7 +41,7 @@
                         <a class="account-menu-box-tab" href="{{ path('app_account_cpwd') }}"><span class="icon entypo-eye account-scnd-font-color"></span>Modifier Mot de passe</a>                            
                     </li>
                     <li>
-                        <a class="account-menu-box-tab" href="#10"><span class="icon entypo-location account-scnd-font-color"></span>Modifier Adresse</a>                            
+                        <a class="account-menu-box-tab" href="{{ path('app_account_user_address') }}"><span class="icon entypo-location account-scnd-font-color"></span>Mes Adresses</a>                            
                     </li>
                     <li>
                         <a class="account-menu-box-tab" href="#13"><span class="icon entypo-chart-line account-scnd-font-color"></span>Mes satistiques</a>
