--- a/templates/front/product/index.html.twig
+++ b/templates/front/product/index.html.twig
@@ -7,8 +7,10 @@
     <div class="row">
         <div class="col-md-3">
             <h3>Filtre</h3>
-            {{form(form)}}
-            <button class="btn btn-dark btn-block" type="submit">Filtrer</button> 
+            {{form_start(form)}}
+                {{form_rest(form)}}
+                <button class="btn btn-dark btn-block" type="submit">Filtrer</button> 
+            {{form_end(form)}}
         </div>
         <div class="col-md-9">
             {% for product in products %}
