--- a/templates/front/product/index.html.twig
+++ b/templates/front/product/index.html.twig
@@ -6,20 +6,23 @@
     <h1>PRODUITS</h1>
     <div class="row">
         <div class="col-md-3">
+            <hr class="w-75">
             <h3>Filtre</h3>
             {{form_start(form)}}
-                {{form_rest(form)}}
-                <button class="btn btn-dark btn-block" type="submit">Filtrer</button> 
+                <div class="w-75">
+                    {{form_row(form)}}
+                </div>
+                <button class="btn btn-dark btn-block w-75" type="submit">Filtrer</button> 
             {{form_end(form)}}
         </div>
         <div class="col-md-9">
-            {% for product in products %}
-                {{ component('card', {'id' : product.id}) }}
+            <div class="row justify-content-between">
+                {% for product in products %}
+                    {{ component('card', {'id' : product.id}) }}
                 {% else %}
-                <div class="col-6">
                     <p> Aucun produit disponible.</p>
-                </div>
-            {% endfor %}
+                {% endfor %}
+            </div>
         </div>
     </div>
 {% endblock %}
