--- a/templates/components/card.html.twig
+++ b/templates/components/card.html.twig
@@ -9,7 +9,11 @@
                 <a href="{{ path('app_user_cart_add', {'id': this.card.id}) }}" class=""><button class="btn btn-dark">Ajouter au panier</button></a>
             {% else %}
                 <a href="{{ path('app_edit_product',{'id':this.card.id}) }}" class=""><button class="btn btn-dark my-2">Modifier</button></a>
-                <a href="#" class=""><button class="btn btn-dark">supprimer</button></a>
+                {# <a href="#" class=""><button class="btn btn-dark">supprimer</button></a> #}
+                <form class="d-inline-block px-3" method="post" action="{{ path('app_delete_product', {'id': this.card.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ this.card.id) }}">
+                    <button class="btn btn-dark">Supprimer</button>
+                </form>
             {% endif %}
         </div>
     {# </div> #}
