--- a/public/assets/css/aliex.css
+++ b/public/assets/css/aliex.css
@@ -58,9 +58,19 @@
   box-sizing: border-box;  
 }
 
-/* body {
-	background: rgba(230, 218, 218, 0.667);
-} */
+body{
+	position: relative;
+	min-height: 100vh;
+}
+
+#footer{
+	position: absolute;
+	bottom: 0;	
+	width: 100%;
+	height: 5.5rem;            /* Footer height */
+	background-color: #00000a;
+}
+
 .account-main-container ul {
 	list-style-type: none;
 	margin: 0;
