--- a/templates/front/security/login.html.twig
+++ b/templates/front/security/login.html.twig
@@ -3,42 +3,53 @@
 {% block title %}Se connecter - Aliex{% endblock %}
 
 {% block content %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+<div class="d-flex justify-content-center align-items-center">
+    <div class="">
+    <form method="post" class="border shadow">
+        <div class="m-5">
+            <div class="row text-center">
+                {% if error %}
+                    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                {% endif %}
 
-    {# {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+                <h1 class="h3 mb-3 font-weight-normal">Connexion</h1>
+                <hr>
+            </div>
+            <div class="row align-items-between">
+                <div class="col-12">
+                    <label for="inputEmail"><strong>Email</strong></label>
+                    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control mb-3" autocomplete="email" required autofocus>
+                </div>
+                <div class="col-12">
+                    <label for="inputPassword"><strong>Password</strong></label>
+                    <input type="password" name="password" id="inputPassword" class="form-control btn-sm mb-1" autocomplete="current-password" required>
+                </div>
+                <div class="mb-3">
+                    <span><a class="text-decoration-none" href="{{ path('app_register')}}">ou créez un compte</a></span>
+                </div>
+                <input type="hidden" name="_csrf_token"
+                    value="{{ csrf_token('authenticate_') }}"
+                >
+            </div>
+            {#
+                Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+                See https://symfony.com/doc/current/security/remember_me.html
+
+                <div class="checkbox mb-3">
+                    <label>
+                        <input type="checkbox" name="_remember_me"> Remember me
+                    </label>
+                </div>
+            #}
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <button class="btn btn-dark btn-dark w-50" type="submit">
+                        Se connecter
+                    </button>
+                </div>
+            </div>
         </div>
-    {% endif %} #}
-
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control mb-3" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control btn-sm mb-1" autocomplete="current-password" required>
-    <div class="mb-3">
-        <span><a class="text-decoration-none" href="{{ path('app_register')}}">ou créez un compte</a></span>
+    </form>
     </div>
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate_') }}"
-    >
-
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
-
-    <button class="btn btn-sm btn-primary" type="submit">
-        Se connecter
-    </button>
-</form>
+</div>
 {% endblock %}
