--- a/templates/emails/editProducts.html.twig
+++ b/templates/emails/editProducts.html.twig
@@ -207,10 +207,10 @@
                                                                                     <tr>
                                                                                         <td class="esd-block-text es-p10b"
                                                                                             align="left">
-                                                                                            <p><strong> Nous vous
+                                                                                            <p><strong> {{ username }}Nous vous
                                                                                                     informons que votre
-                                                                                                    annonce a bien été
-                                                                                                    modifié</strong>
+                                                                                                     produit {{ product_name }} a bien été
+                                                                                                    modifié </strong>
                                                                                             </p>
                                                                                             <br>
 
