--- a/templates/emails/deleteProducts.html.twig
+++ b/templates/emails/deleteProducts.html.twig
@@ -209,19 +209,13 @@
                                                                                             align="left">
                                                                                             <p><strong> Nous vous
                                                                                                     informons que votre
-                                                                                                    annonce a bien été
+                                                                                                    produit : {{ product_name }} a bien été
                                                                                                     supprimé </strong>
                                                                                             </p>
                                                                                             <br>
 
 
                                                                                             <br>
-
-
-
-
-
-
 
                                                                                     </tr>
                                                                                     <tr>
