--- a/templates/back/categories/index.html.twig
+++ b/templates/back/categories/index.html.twig
@@ -6,7 +6,8 @@
 <div id="layoutSidenav_content">
     <main>
         <div class="container-fluid px-4">
-            <h1 class="mt-4">Catégories</h1>
+            <h1 class="mt-4 d-inline-block">Catégories</h1>
+            <a class="btn btn-dark d-inline-block mt-4 float-end" href="{{ path('app_admin_categories_add') }}">Ajouter</a>
             <ol class="breadcrumb mb-4">
                 <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
                 <li class="breadcrumb-item active">Catégories</li>
@@ -28,34 +29,29 @@
                     <table id="datatablesSimple">
                         <thead>
                             <tr>
-                                <th>Nom & Prénom(s)</th>
-                                <th>Date de création</th>
-                                <th>Status</th>
-                                <th>Nombre d'offre(s)</th>
-                                <th>Montant de ventes</th>
-                                <th>Dépences</th>
+                                <th>Nom</th>
+                                <th></th>
                             </tr>
                         </thead>
-                        <tfoot>
+                        <tbody>
+                        {% for category in categories %}
                             <tr>
-                                <th>Nom & Prénom(s)</th>
-                                <th>Date de création</th>
-                                <th>Status</th>
-                                <th>Nombre d'offre(s)</th>
-                                <th>Montant de ventes</th>
-                                <th>Dépences</th>
+                                <td>{{ category.name }}</td>
+                                <td>
+                                    <div class="d-flex justify-content-around">
+                                        <a class="d-inline-block" href="{{ path('app_admin_categories_edit', {'id': category.id }) }}">
+                                            <span class="icon fa fa-pencil" style="font-size:22px"></span>
+                                        </a>
+                                        <form class="d-inline-block px-3" method="post" action="{{ path('app_admin_categories_delete', {'id': category.id }) }}" onsubmit="return confirm('Are you sure you want to delete this category ?');">
+                                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ category.id) }}">
+                                            <button class="icon fa fa-trash" style="font-size:22px"></button>
+                                        </form>
+
+                                    </div>
+                                </td>
                             </tr>
-                        </tfoot>
-                        <tbody>                                    
-                            <tr>
-                                <td>Rhona Davidson</td>
-                                <td>Integration Specialist</td>
-                                <td>Tokyo</td>
-                                <td>55</td>
-                                <td>2010/10/14</td>
-                                <td>$327,900</td>
-                            </tr>
-                        </tbody>                                    
+                        {% endfor %}
+                        </tbody>
                     </table>
                 </div>
             </div>
