--- a/templates/back/categories/index.html.twig
+++ b/templates/back/categories/index.html.twig
@@ -41,14 +41,11 @@
                                         <div class="d-flex justify-content-around">
                                             <a class="d-inline-block"
                                                href="{{ path('app_admin_categories_edit', {'id': category.id }) }}">
-                                                <span class="icon fa fa-pencil" style="font-size:22px"></span>
+                                                <span class="fa fa-pencil" style="font-size:22px; color: black"></span>
                                             </a>
-                                            <form class="d-inline-block px-3" method="post"
-                                                  action="{{ path('app_admin_categories_delete', {'id': category.id }) }}"
-                                                  onclick="return confirm('Are you sure you want to delete this category ?');">
-                                                <input type="hidden" name="_token"
-                                                       value="{{ csrf_token('delete' ~ category.id) }}">
-                                                <button type="submit" class="icon fa fa-trash" style="font-size:22px"></button>
+                                            <form class="d-inline-block px-3" method="post" action="{{ path('app_admin_categories_delete', {'id': category.id }) }}" onsubmit="return confirm('Are you sure you want to delete this category ?');">
+                                                <input type="hidden" name="_token" value="{{ csrf_token('delete_' ~ category.id) }}">
+                                                <button class="border-0 bg-transparent" style="font-size:22px"><span class="fa fa-trash"></span></button>
                                             </form>
                                         </div>
                                     </td>
