template changeCategoryProducts & fix on others templates

--- a/templates/emails/addProducts.html.twig
+++ b/templates/emails/addProducts.html.twig
@@ -208,7 +208,7 @@
                                                                                         <td class="esd-block-text es-p10b"
                                                                                             align="left">
                                                                                             <p><strong> Nous vous
-                                                                                                    informons que votre
+                                                                                                    informons que votre produit : {{  product_name }} à été
 
                                                                                                     ajouté </strong>
                                                                                             </p>
