--- a/templates/emails/changeCategoryProducts.html.twig
+++ b/templates/emails/changeCategoryProducts.html.twig
@@ -207,16 +207,22 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                                                         <tr>
                                                             <td class="esd-block-text es-p10b"
                                                                 align="left">
-                                                                <p><strong> Nous vous
-                                                                        informons que la catégorie de votre produit
-                                                                        a bien été
-                                                                        modifié
-                                                                    </strong>
-                                                                </p><br />
+                                                                <p><strong> {{ username }}, nous vous
+                                                                        informons que la catégorie de votre
+                                                                        produit {{ product_name }} a bien été
+                                                                        modifié </strong>
 
-                                                                <p> la catégorie de votre produit est désormais : {{ product_category}} </p>
                                                                 <br>
+
+
                                                                 <br>
+
+
+
+
+
+
+
                                                         </tr>
                                                         <tr>
 
