--- a/templates/emails/editProducts.html.twig
+++ b/templates/emails/editProducts.html.twig
@@ -207,7 +207,7 @@
                                                                                     <tr>
                                                                                         <td class="esd-block-text es-p10b"
                                                                                             align="left">
-                                                                                            <p><strong> {{ username }}Nous vous
+                                                                                            <p><strong> {{ username }}, nous vous
                                                                                                     informons que votre
                                                                                                      produit {{ product_name }} a bien été
                                                                                                     modifié </strong>
