--- a/templates/back/users/index.html.twig
+++ b/templates/back/users/index.html.twig
@@ -3,76 +3,91 @@
 {% block title %}Users | ADMIN - Aliex{% endblock %}
 
 {% block content %}
-<div id="layoutSidenav_content">
-    <main>
-        <div class="container-fluid px-4">
-            <h1 class="mt-4">Users</h1>
-            <ol class="breadcrumb mb-4">
-                <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
-                <li class="breadcrumb-item active">Users</li>
-            </ol>
-            <div class="card mb-4">
-                <div class="card-body">
-                    INFORMATIONS
-                    <a target="_blank" href="https://datatables.net/">official DataTables documentation</a>
-                    .
+    <div id="layoutSidenav_content">
+        {{ dump(users) }}
+        <main>
+            <div class="container-fluid px-4">
+                <h1 class="mt-4">Users</h1>
+                <ol class="breadcrumb mb-4">
+                    <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+                    <li class="breadcrumb-item active">Users</li>
+                </ol>
+                <div class="card mb-4">
+                    <div class="card-body">
+                        INFORMATIONS
+                        <a target="_blank" href="https://datatables.net/">official DataTables documentation</a>
+                        .
+                    </div>
+                </div>
+                <!-- TABLES -->
+                <div class="card mb-4">
+                    <div class="card-header">
+                        <i class="fas fa-table me-1"></i>
+                        UTILISATEURS
+                    </div>
+                    <div class="card-body">
+                        <table id="datatablesSimple">
+                            <thead>
+                            <tr>
+                                <th>Username</th>
+                                <th>Prénom</th>
+                                <th>Nom</th>
+                                <th>Email</th>
+                                <th>Roles</th>
+                                <th>Produits</th>
+                                <th>Adresse</th>
+                                <th></th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for user in users %}
+                                <tr>
+                                    <td>{{ user.username }}</td>
+                                    <td>{{ user.firstname }}</td>
+                                    <td>{{ user.lastname }}</td>
+                                    <td>{{ user.email }}</td>
+                                    {#<td>{{ user.roles }}</td>
+                                    <td>{{ user.products }}</td>
+                                    <td>{{ user.addresses }}</td>#}
+                                    <td>Placeholder</td>
+                                    <td>Placeholder</td>
+                                    <td>Placeholder</td>
+                                    <td>
+                                        <div class="d-flex justify-content-around">
+                                            <a class="d-inline-block"
+                                               href="{{ path('app_admin_users_edit', {'id': user.id }) }}">
+                                                <span class="fa fa-pencil" style="font-size:22px; color: black"></span>
+                                            </a>
+                                            <form class="d-inline-block px-3" method="post"
+                                                  action="{{ path('app_admin_users_delete', {'id': user.id }) }}"
+                                                  onsubmit="return confirm('Are you sure you want to delete this category ?');">
+                                                <input type="hidden" name="_token"
+                                                       value="{{ csrf_token('delete_' ~ user.id) }}">
+                                                <button class="border-0 bg-transparent" style="font-size:22px"><span
+                                                            class="fa fa-trash"></span></button>
+                                            </form>
+                                        </div>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <!-- TABLES -->
+            </div>
+        </main>
+        <footer class="py-4 bg-light mt-auto">
+            <div class="container-fluid px-4">
+                <div class="d-flex align-items-center justify-content-between small">
+                    <div class="text-muted">Copyright &copy; Your Website 2022</div>
+                    <div>
+                        <a href="#">Privacy Policy</a>
+                        &middot;
+                        <a href="#">Terms &amp; Conditions</a>
+                    </div>
                 </div>
             </div>
-            <!-- TABLES -->
-            <div class="card mb-4">
-                <div class="card-header">
-                    <i class="fas fa-table me-1"></i>
-                    UTILISATEURS
-                </div>
-                <div class="card-body">
-                    <table id="datatablesSimple">
-                        <thead>
-                            <tr>
-                                <th>Nom et Prénoms</th>
-                                <th>Date de création</th>
-                                <th>Status</th>
-                                <th>Nombre d'offre</th>
-                                <th>Montant de ventes</th>
-                                <th>Dépences</th>
-                            </tr>
-                        </thead>
-                        <tfoot>
-                            <tr>
-                                <th>Nom et Prénoms</th>
-                                <th>Date de création</th>
-                                <th>Status</th>
-                                <th>Nombre d'offres</th>
-                                <th>Montant de ventes</th>
-                                <th>Dépences</th>
-                            </tr>
-                        </tfoot>
-                        <tbody>                                    
-                            <tr>
-                                <td>Rhona Davidson</td>
-                                <td>Integration Specialist</td>
-                                <td>Tokyo</td>
-                                <td>55</td>
-                                <td>2010/10/14</td>
-                                <td>$327,900</td>
-                            </tr>
-                        </tbody>                                    
-                    </table>
-                </div>
-            </div>
-            <!-- TABLES -->
-        </div>
-    </main>
-    <footer class="py-4 bg-light mt-auto">
-        <div class="container-fluid px-4">
-            <div class="d-flex align-items-center justify-content-between small">
-                <div class="text-muted">Copyright &copy; Your Website 2022</div>
-                <div>
-                    <a href="#">Privacy Policy</a>
-                    &middot;
-                    <a href="#">Terms &amp; Conditions</a>
-                </div>
-            </div>
-        </div>
-    </footer>
-</div>
+        </footer>
+    </div>
 {% endblock %}
