--- a/templates/back/addresses/index.html.twig
+++ b/templates/back/addresses/index.html.twig
@@ -6,9 +6,10 @@
 <div id="layoutSidenav_content">
     <main>
         <div class="container-fluid px-4">
-            <h1 class="mt-4">Adresses</h1>
+            <h1 class="mt-4 d-inline-block">Adresses</h1>
+            <a class="btn btn-dark d-inline-block mt-4 float-end" href="{{ path('app_admin_addresses_add') }}">Ajouter</a>
             <ol class="breadcrumb mb-4">
-                <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+                <li class="breadcrumb-item"><a href="{{ path('app_admin_index') }}">Dashboard</a></li>
                 <li class="breadcrumb-item active">Adresses</li>
             </ol>
             <div class="card mb-4">
@@ -28,33 +29,42 @@
                     <table id="datatablesSimple">
                         <thead>
                             <tr>
-                                <th>Nom & Prénom(s)</th>
-                                <th>Date de création</th>
-                                <th>Status</th>
-                                <th>Nombre d'offre(s)</th>
-                                <th>Montant de ventes</th>
-                                <th>Dépences</th>
+                                <th>Nom</th>
+                                <th>Rue</th>
+                                <th>Ville</th>
+                                <th>Code postal</th>
+                                <th>Pays</th>
+                                <th>Numéro</th>
+                                <th>Utilisateur</th>
+                                <th>Société</th>
+                                <th></th>
                             </tr>
                         </thead>
-                        <tfoot>
+                        <tbody>
+                        {% for address in addresses %}
                             <tr>
-                                <th>Nom & Prénom(s)</th>
-                                <th>Date de création</th>
-                                <th>Status</th>
-                                <th>Nombre d'offre(s)</th>
-                                <th>Montant de ventes</th>
-                                <th>Dépences</th>
+                                <td>{{ address.name }}</td>
+                                <td>{{ address.street }}</td>
+                                <td>{{ address.city }}</td>
+                                <td>{{ address.codepostal }}</td>
+                                <td>{{ address.country }}</td>
+                                <td>{{ address.phone }}</td>
+                                <td>{{ address.owner.firstname }} {{ address.owner.lastname }}</td>
+                                <td>{{ address.company }}</td>
+                                <td>
+                                    <div class="d-flex justify-content-around">
+                                        <a class="d-inline-block"
+                                           href="{{ path('app_admin_addresses_edit', {'id': address.id }) }}">
+                                            <span class="fa fa-pencil" style="font-size:22px; color: black"></span>
+                                        </a>
+                                        <form class="d-inline-block px-3" method="post" action="{{ path('app_admin_addresses_delete', {'id': address.id }) }}" onsubmit="return confirm('Are you sure you want to delete this address ?');">
+                                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ address.id) }}">
+                                            <button class="border-0 bg-transparent" style="font-size:22px"><span class="fa fa-trash"></span></button>
+                                        </form>
+                                    </div>
+                                </td>
                             </tr>
-                        </tfoot>
-                        <tbody>                                    
-                            <tr>
-                                <td>Rhona Davidson</td>
-                                <td>Integration Specialist</td>
-                                <td>Tokyo</td>
-                                <td>55</td>
-                                <td>2010/10/14</td>
-                                <td>$327,900</td>
-                            </tr>
+                        {% endfor %}
                         </tbody>                                    
                     </table>
                 </div>
