save changes to AdminUsers

--- a/templates/back/users/form.html.twig
+++ b/templates/back/users/form.html.twig
@@ -8,7 +8,7 @@
             <h3>Gestion des utilisateurs</h3>
             <hr>
             {{ form_start(form) }}
-                {{ form_row(form) }}
+                {{ form_rest(form) }}
             <button type="submit">Valider</button>
             {{ form_end(form) }}
         </div>
