--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -76,10 +76,10 @@
                       <ul class="navbar-nav me-auto mb-2 mb-md-0">
                           {% if app.user is null %}
                           <li class="nav-item">
-                              <a class="nav-link" aria-current="page" href="{{ path('app_login')}}">Login</a>
+                              <a class="nav-link" aria-current="page" href="{{ path('app_login')}}">Connexion</a>
                           </li>
                           <li class="nav-item">
-                              <a class="nav-link" aria-current="page" href="{{ path('app_register') }}">Register</a>
+                              <a class="nav-link" aria-current="page" href="{{ path('app_register') }}">Inscription</a>
                           </li>
                           {% else %}
                           {# <li class="nav-item">
