--- a/templates/back_base.html.twig
+++ b/templates/back_base.html.twig
@@ -88,6 +88,10 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                                 Adresses
                             </a>
+                            <a class="nav-link" href="{{ path('app_admin_products_index') }}">
+                                <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                                Produits
+                            </a>
                         </div>
                     </div>
                     <div class="sb-sidenav-footer">
