--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -162,6 +162,7 @@
       <div class="container marketing {% if block('caroussel') is not defined %}mt-5 mb-5{% endif %}">
       {% block content %}
       {% endblock %}
+      </div>
     </main>
     <footer id="footer" class="py-4 mt-auto">
       <div class="container-fluid px-4">
