--- a/templates/front/account/offers.html.twig
+++ b/templates/front/account/offers.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Mes offres - Aliex{% endblock %}
 
 {% block content %}
+<div class="pt-5">
     <h1 class="d-inline-block">Mes Offres</h1>
     <a class="btn btn-block btn-dark w-25 d-inline-block" style="float:right;" href="{{ path('app_new_product') }}">Ajouter</a>
     <hr>
@@ -15,4 +16,5 @@
         </div>
     {% endfor %}
     </div>
+</div>
 {% endblock %}
