--- a/templates/front/default/index.html.twig
+++ b/templates/front/default/index.html.twig
@@ -7,7 +7,7 @@
   <div class="">
     <div class="mx-auto">
       <h4 class="">Des millions de petites annonces et autant d’occasions pour se faire plaisir</h4>
-      <div class="row">
+      {# <div class="row">
         <div class="custom-control custom-radio custom-control-inline col-3 col-sm-2 mb-2 mx-2">
           <input type="radio" id="customRadioInline1" name="customRadioInline1" class="custom-control-input">
           <label class="custom-control-label" for="customRadioInline1">Offres</label>
@@ -16,10 +16,10 @@
           <input type="radio" id="customRadioInline2" name="customRadioInline1" class="custom-control-input">
           <label class="custom-control-label" for="customRadioInline2">Demandes</label>
         </div>
-      </div>
+      </div> #}
       {# src: https://getbootstrap.com/docs/4.0/components/forms/#browser-defaults #}
       
-      <form class="form-row d-flex justify-content-between">
+      {# <form class="form-row d-flex justify-content-between">
         <div class="col-sm-5 col-lg-6 mb-3 mx-2">
           <div class="input-group">
             <span class="input-group-text"><i class="bi bi-search"></i></span>
@@ -38,7 +38,7 @@
             <span class="input-group-text"><i class="bi bi-geo-alt" ></i></span>
           </div>
         </div>
-      </form>
+      </form> #}
       {# Prix | src : https://getbootstrap.com/docs/5.0/forms/range/#min-and-max #}
     </div><!-- /.col-lg-4 -->
   </div><!-- /.row -->
