--- a/templates/front/product/index.html.twig
+++ b/templates/front/product/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Produits - Aliex{% endblock %}
 
 {% block content %}
+<div class="pt-3">
     <h1>PRODUITS</h1>
     <div class="row">
         <div class="col-md-3">
@@ -25,4 +26,5 @@
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
