--- a/templates/front/account/index.html.twig
+++ b/templates/front/account/index.html.twig
@@ -35,7 +35,7 @@
                         <a class="account-menu-box-tab" href="{{ path('app_user_cart_index')}}"><span class="icon fontawesome-shopping-cart account-scnd-font-color"></span>Mon panier<div class="account-menu-box-number">{{ (app.session) ? app.session.get('cart', []) |length : 0}}</div></a>                            
                     </li>
                     <li>
-                        <a class="account-menu-box-tab" href="{{ path('app_user_cart_index')}}"><span class="icon fontawesome-shopping-cart account-scnd-font-color"></span>Mes Commandes<div class="account-menu-box-number">1</div></a>                            
+                        <a class="account-menu-box-tab" href="{{ path('app_account_order')}}"><span class="icon fontawesome-shopping-cart account-scnd-font-color"></span>Mes Commandes<div class="account-menu-box-number">{{ app.user.getOrdersPaid|length }}</div></a>                            
                     </li>
                     <li>
                         <a class="account-menu-box-tab" href="{{ path('app_account_cpwd') }}"><span class="icon entypo-eye account-scnd-font-color"></span>Modifier Mot de passe</a>                            
