--- a/templates/front/order/success.html.twig
+++ b/templates/front/order/success.html.twig
@@ -1,9 +1,25 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Paiement de ma commande - Aliex{% endblock %}
+{% block title %}Confirmation de commande - Aliex{% endblock %}
 
 {% block content %}
 <div class="container-fluid pt-4">
-    <h2>Paiement réussit !</h2>
+    <h2> Confirmation de commande </h2>
+    <div class="row">
+        <div class="col-8">
+            <p>
+                Bonjour <strong>{{ datas.owner.firstname }}</strong> <strong>{{ datas.owner.lastname }}</strong>,<br>
+                Nous vous remercions de votre commande n° <strong>{{datas.reference}}</strong>.<br>
+                Une confirmation vient de vous être envoyée par email à l'adresse <strong>{{ datas.owner.email }}</strong>.
+            </p>
+        </div>
+        <div class="col-4">
+            <p>Votre commande sera livré par <strong>{{datas.carrierName}}</strong> à l'adresse suivante :<br>{{datas.shippingAddress|raw}}</p>
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <p>Pour suivre votre commande, rendez-vous dans votre <a href="{{path('app_account')}}">espace membre</a>.</p>
+    </div>
 </div>
 {% endblock %}
